# configmaton

./: .gitignore  .pre-commit-config.yaml  ANCHA_MIGRATION_STATUS.md  ANCHA_STATUS.md  ANCHA_SYSTEM.md  BLOB_REFACTORING_PLAN.md  BLOB_TO_ANCHA_MIGRATION_GUIDE.md  COMPOSABLE_SERIALIZATION.md  Cargo.toml  README.md  pyproject.toml  rustfmt.toml  visualize.sh
ancha/: Cargo.toml
ancha/src/: arrmap.rs  assoc_list.rs  bdd.rs  flagellum.rs  hashmap.rs  lib.rs  list.rs  listmap.rs  sediment.rs  tupellum.rs  vec.rs  vecmap.rs
configmaton/: Cargo.toml
configmaton-ffi/: Cargo.toml  build.rs
configmaton-ffi/src/: lib.rs
configmaton/src/: ancha.rs  ast.rs  blob.rs  char_enfa.rs  char_nfa.rs  char_runner.rs  cli.rs  configmaton.rs  guards.rs  keyval_nfa.rs  keyval_runner.rs  keyval_simulator.rs  lib.rs  onion.rs  server.rs
configmaton/src/ancha/: arrmap.rs  bdd.rs  list.rs  sediment.rs  tupellum.rs  vec.rs  vecmap.rs
configmaton/src/blob/: arrmap.rs  assoc_list.rs  automaton.rs  bdd.rs  flagellum.rs  hashmap.rs  keyval_state.rs  list.rs  listmap.rs  sediment.rs  ser.rs  state.rs  traits.rs  tupellum.rs  vec.rs  vecmap.rs
configmaton/src/my_ancha/: automaton.rs  keyval_state.rs  mod.rs  state.rs
python/: .gitignore  README.md  dev.sh  pyproject.toml  setup.py
python/configmaton/: __init__.py  c_configmaton.pxd  configmaton.pyx
python/tests/: __init__.py  kitchen.json  test_basic.py  test_kitchen.py
src/: automaton.rs  blob.rs  borrow_lock.rs  char_runner.rs  command.rs  commands.rs  config_parser.rs  dfa.rs  guards.rs  holder.rs  keyval_nfa.rs  keyval_runner.rs  keyval_simulator.rs  lang_intersection.rs  lib.rs  lock.rs  onion.rs  parser_to_simulator.rs  reflike.rs
src/blob/: arrmap.rs  assoc_list.rs  automaton.rs  flagellum.rs  hashmap.rs  homo_key_assoc.rs  keyval_state.rs  list.rs  listmap.rs  sediment.rs  state.rs  tupellum.rs  vec.rs  vecmap.rs
src/config_parser/: ast.rs  dfa.rs  guards.rs  nfa.rs
test/: simple.json  test_basic.py
tests/: config.json  config_pretty.json  config_to_nfa.rs  layered_automaton.rs
