[package]
name = "configmaton"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
hashbrown = "0.15.0"
indexmap = "2.6.0"
regex-syntax = "0.8.5"
smallvec = "1.13.2"
twox-hash = "2.0.0"
