[package]
name = "configmaton"
version.workspace = true
edition.workspace = true

[lib]
name = "configmaton"
path = "src/lib.rs"

[[bin]]
name = "configmaton-cli"
path = "src/cli.rs"
required-features = ["cli"]

[features]
default = []
cli = [
    "dep:clap",
]

# Core dependencies (always needed)
[dependencies]
ancha = { path = "../ancha" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
hashbrown = "0.15.0"
indexmap = "2.6.0"
regex-syntax = "0.8.5"
smallvec = "1.13.2"
twox-hash = "2.0.0"

# CLI-only dependencies
clap = { version = "3.0", features = ["derive"], optional = true }
